Implements WebFlux and BaseResponse